<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".ui.activities.register.RegisterActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activities.register.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:scaleType="center"
                    android:src="@drawable/backarrow" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:fontFamily="@font/quicksand_bold"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/register"
                android:gravity="center"
                android:textColor="@color/textColorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/black_stroke_rounded_white"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorEt"
                android:textColorHighlight="@color/bg_color1"
                android:textColorHint="@color/colorEtHint"
                android:textSize="@dimen/_16sdp"
                android:paddingStart="@dimen/_16sdp"
                android:theme="@style/MyEditTextTheme" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/black_stroke_rounded_white"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorEt"
                android:textColorHint="@color/colorEtHint"
                android:textSize="@dimen/_16sdp"
                android:paddingStart="@dimen/_16sdp"
                android:theme="@style/MyEditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/black_stroke_rounded_white"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorEt"
                android:textColorHint="@color/colorEtHint"
                android:textSize="@dimen/_16sdp"
                android:paddingStart="@dimen/_16sdp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/password_reminder"/>.
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>
    </LinearLayout>


</ScrollView>
