<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/collection_background"
        android:contentDescription="@string/create_your_own_story" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/top_navigation_without_search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/dino_with_music"
                android:contentDescription="@string/create_your_own_story" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:textSize="20sp"
                android:text="@string/create_your_own_story"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/own_story_template_item"
            tools:itemCount="6"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/ll_button_group"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_brown"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:text="@string/no"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_green"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:text="@string/yes"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_story_book"
                android:visibility="visible"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_325sdp"
                android:layout_gravity="end"
                android:orientation="vertical"
                android:background="@drawable/book_page">
                <TextView
                    android:id="@+id/tv_story"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:gravity="top"
                    android:background="@color/transparent_white"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:paddingStart="@dimen/_45sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:autoSizeMaxTextSize="@dimen/_20sdp"
                    android:autoSizeMinTextSize="@dimen/_10sdp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/record_msg"
                    tools:targetApi="o"/>

                <EditText
                    android:id="@+id/et_story"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:gravity="top"
                    android:background="@color/transparent_white"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:paddingStart="@dimen/_45sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="@dimen/_20sdp"
                    android:autoSizeMinTextSize="@dimen/_10sdp"
                    android:autoSizeStepGranularity="2sp"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:inputType="text|textMultiLine|textAutoCorrect|textAutoComplete"
                    android:text="@string/record_msg"
                    tools:targetApi="o"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:minLines="2"
                    android:maxLines="7"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:layout_marginHorizontal="@dimen/_11sdp"
                    android:background="@drawable/download"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlCompat"
                    android:text="@string/save"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_next"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:layout_marginTop="-24dp"
                    android:layout_marginEnd="@dimen/_60sdp"
                    android:backgroundTint="#90B408"
                    android:background="@drawable/white_fav_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlCompat"
                    android:text="@string/next"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_story_cover"
                android:visibility="visible"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_325sdp"
                android:layout_gravity="start"
                android:orientation="vertical"
                android:elevation="@dimen/_14sdp"
                android:background="@drawable/book_page_left">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:gravity="top"
                    android:background="@color/transparent_white"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:paddingEnd="@dimen/_45sdp"
                    android:paddingStart="@dimen/_18sdp"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:autoSizeMaxTextSize="@dimen/_20sdp"
                    android:autoSizeMinTextSize="@dimen/_10sdp"
                    android:autoSizeTextType="uniform"
                    android:text="Add Title and Book Cover"
                    tools:targetApi="o"/>

                <EditText
                    android:id="@+id/et_title"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:gravity="top"
                    android:background="@color/transparent_white"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:paddingEnd="@dimen/_45sdp"
                    android:paddingStart="@dimen/_18sdp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="@dimen/_20sdp"
                    android:autoSizeMinTextSize="@dimen/_10sdp"
                    android:autoSizeStepGranularity="2sp"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:inputType="text|textMultiLine|textAutoCorrect|textAutoComplete"
                    android:text="@string/record_msg"
                    tools:targetApi="o"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:minLines="2"
                    android:maxLines="7"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save_cover"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:layout_marginHorizontal="@dimen/_11sdp"
                    android:background="@drawable/download"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlCompat"
                    android:text="@string/save"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_upload"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:layout_marginTop="-24dp"
                    android:layout_marginEnd="@dimen/_60sdp"
                    android:backgroundTint="#90B408"
                    android:background="@drawable/white_fav_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlCompat"
                    android:text="Upload\nCover"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/outline_btn_speak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:background="@drawable/button_outline_null">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_speak"
                        android:layout_width="@dimen/_64sdp"
                        android:layout_height="@dimen/_64sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:background="@drawable/read_to_me"
                        android:text="@string/speak"
                        android:textSize="@dimen/_11sdp"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:gravity="bottom"
                        tools:ignore="RtlCompat" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/outline_btn_listen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:background="@drawable/button_outline_null">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_listen"
                        android:layout_width="@dimen/_64sdp"
                        android:layout_height="@dimen/_64sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:background="@drawable/listen"
                        android:text="@string/listen"
                        android:textSize="@dimen/_11sdp"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:gravity="bottom"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/outline_btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:background="@drawable/button_outline_null">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_edit"
                        android:layout_width="@dimen/_64sdp"
                        android:layout_height="@dimen/_64sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:background="@drawable/dino_edit"
                        android:text="@string/edit"
                        android:textSize="@dimen/_11sdp"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:gravity="bottom"
                        tools:ignore="RtlCompat" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>