<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".ui.activities.login.LoginActivity">

    <LinearLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_60sdp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/black_stroke_rounded_white"
                    android:fontFamily="@font/quicksand_bold"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorEt"
                    android:textColorHighlight="@color/bg_color1"
                    android:textColorHint="@color/colorEtHint"
                    android:textSize="@dimen/_16sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:theme="@style/MyEditTextTheme" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="vertical"

                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/black_stroke_rounded_white"
                    android:fontFamily="@font/quicksand_bold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorEt"
                    android:textColorHint="@color/colorEtHint"
                    android:textSize="@dimen/_16sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:theme="@style/MyEditTextTheme" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/dull_white" />
            </LinearLayout>


            <Button
                android:id="@+id/login_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button"
                android:fontFamily="@font/quicksand_bold"
                android:text="LOGIN"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <LinearLayout
                android:id="@+id/ll_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ch_remember_me"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/custom_checkbox"
                    android:button="@null"
                    android:checked="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="Remember me"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/connect_with"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="horizontal">
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
                <ImageView
                    android:id="@+id/facebook_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:src="@drawable/fb"/>
                <ImageView
                    android:id="@+id/google_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google"/>
            </GridLayout>
    </LinearLayout>
    </LinearLayout>


</ScrollView>
